--- a/style.css
+++ b/style.css
@@ -13,11 +13,30 @@
     font-family: "Poppins", system-ui;
     font-weight: 400;
     font-style: normal;
+    background-color: #98DED9;
+    height: 100vh;
+    width: 100vw;
+}
+
+.user-input {
+    background-color: rgba(255, 2555, 255, 0.3);
+    padding: 24px;
+    border-radius: 8px;
+    width: 30%;
+}
+
+.user-input h1 {
+    text-align: center;
+}
+
+.user-form {
+    margin-top: 15px;
+    width: 100%;
 }
 
 .card {
     width: 100%;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -51,12 +70,37 @@
     width: 50%;
 }
 
+.form-item {
+    margin-bottom: 16px;
+}
+
+.form-item input {
+    margin-top: 8px;
+}
+
+.form-item select {
+    margin-top: 8px;
+}
+
 .profile-container {
     width: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.form-input {
+    width: 100%;
+    height: 30px;
+    border-radius: 8px;
+    border: none;
+    padding: 12px;
+}
+
+.form-select {
+    padding: 0.675em 6em 0.675em 1em;
+    height: 40px;
 }
 
 .profile-picture {
