--- a/style.css
+++ b/style.css
@@ -175,6 +175,22 @@
     box-sizing: border-box;
 }
 
+.form-input-user {
+    width: 100%;
+    height: 30px;
+    border-radius: 8px;
+    border: none;
+    padding: 12px;
+    box-sizing: border-box;
+}
+
+.form-select-user {
+    padding: 0.675em 1em;
+    height: 40px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
 .profile-picture {
     width: 100%;
     max-width: 125px;
@@ -188,4 +204,29 @@
 .card-header h1 {
     color: #FFF;
     text-align: center;
+}
+
+@media only screen and (max-width: 768px) {
+    .user-input {
+        width: 40%;
+    }
+
+    .user-input h1 {
+        font-size: 24px;
+    }
+}
+
+@media only screen and (max-width: 414px) {
+    .user-input {
+        width: 70%;
+    }
+}
+
+@media only screen and (max-width: 360px) {
+    .user-input h1 {
+        font-size: 18px;
+    }
+    .user-input p {
+        font-size: 12px;
+    }
 }
